--- a/cilantroConfig.cmake.in
+++ b/cilantroConfig.cmake.in
@@ -8,7 +8,7 @@ if(NOT TARGET @PROJECT_NAME@ AND NOT @PROJECT_NAME@_BINARY_DIR)
     include(CMakeFindDependencyMacro)
     find_package(Eigen3)
     if(NOT TARGET Eigen3::Eigen)
-        message("Eigen has buggy exported package, but headers are found: ${EIGEN3_INCLUDE_DIRS}. Applying workaround.")
+        message("Eigen has a buggy exported package, but headers are found: ${EIGEN3_INCLUDE_DIRS}. Applying workaround.")
         add_library(Eigen INTERFACE IMPORTED GLOBAL)
         target_include_directories(Eigen INTERFACE "${EIGEN3_INCLUDE_DIRS}")
         add_library(Eigen3::Eigen ALIAS Eigen)
