CMakeLists.txt update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,19 +95,21 @@ set(CMAKECONFIG_INSTALL_DIR lib/cmake/${PROJECT_NAME})
 # Install headers
 install(
   FILES "${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_NAME}/config.hpp"
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}
+  DESTINATION include/${PROJECT_NAME}
 )
 install(
   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/include
+  DESTINATION include
 )
 
 # Install library
 install(
   TARGETS ${PROJECT_NAME}
   EXPORT ${PROJECT_NAME}Targets
-  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RUNTIME DESTINATION bin
+  INCLUDES DESTINATION include
 )
 
 # Install package files
